--- a/common/smartv2-base.yaml
+++ b/common/smartv2-base.yaml
@@ -313,12 +313,12 @@ light:
     default_transition_length: 0ms
     segments:
       - id: leds_internal
-        from: 0
-        to: 31
+        from: 1
+        to: 8
         reversed: True
       - id: leds_internal
-        from: 32
-        to: 42
+        from: 9
+        to: 15
         reversed: True
     effects:
       - addressable_lambda:
@@ -327,20 +327,20 @@ light:
           lambda: |-
             auto light_color = id(led_ring).current_values;
             Color color(light_color.get_red() * 255, light_color.get_green() * 255, light_color.get_blue() * 255);
-            int step = 255/43;
-            for (int i = 0; i < 43; i++) {
-              it[i] = color * (((43 - id(global_led_animation_index) + i) % 43) * step);
+            int step = 255/17;
+            for (int i = 0; i < 17; i++) {
+              it[i] = color * (((17 - id(global_led_animation_index) + i) % 17) * step);
             }
-            id(global_led_animation_index) = (id(global_led_animation_index) + 1) % 43;
+            id(global_led_animation_index) = (id(global_led_animation_index) + 1) % 17;
       - addressable_lambda:
           name: "Listening For Command"
           update_interval: 30ms
           lambda: |-
             auto light_color = id(led_ring).current_values;
             Color color(light_color.get_red() * 255, light_color.get_green() * 255, light_color.get_blue() * 255);
-            int step = 255/43;
-            for (int i = 0; i < 43; i++) {
-              it[i] = color * (((43 - id(global_led_animation_index) + i) % 43) * step);
+            int step = 255/17;
+            for (int i = 0; i < 17; i++) {
+              it[i] = color * (((17 - id(global_led_animation_index) + i) % 17) * step);
             }
             id(global_led_animation_index) = (id(global_led_animation_index) + 1) % 43;
       - addressable_lambda:
@@ -356,7 +356,7 @@ light:
             }
             auto light_color = id(led_ring).current_values;
             Color color(light_color.get_red() * 255, light_color.get_green() * 255, light_color.get_blue() * 255);
-            for (int i = 0; i < 43; i++) {
+            for (int i = 0; i < 17; i++) {
                 it[i] = color * uint8_t(255/brightness_step_number*(brightness_step_number-brightness_step));
             }
             if (brightness_decreasing) {
@@ -371,12 +371,12 @@ light:
           name: "Replying"
           update_interval: 30ms
           lambda: |-
-            id(global_led_animation_index) = (43 + id(global_led_animation_index) - 1) % 43;
+            id(global_led_animation_index) = (17 + id(global_led_animation_index) - 1) % 17;
             auto light_color = id(led_ring).current_values;
             Color color(light_color.get_red() * 255, light_color.get_green() * 255, light_color.get_blue() * 255);
-            int step = 255/43;
-            for (int i = 0; i < 43; i++) {
-              it[i] = color * (255 - (((43 - id(global_led_animation_index) + i) % 43) * step));
+            int step = 255/17;
+            for (int i = 0; i < 17; i++) {
+              it[i] = color * (255 - (((17 - id(global_led_animation_index) + i) % 17) * step));
             }
       - addressable_lambda:
           name: "Volume Display"
@@ -386,7 +386,7 @@ light:
             Color silenced_color(255, 0, 0);
             auto volume_ratio = id(external_media_player).volume * 10.0f;
             auto is_muted = id(external_media_player).is_muted() || id(external_media_player).volume == 0.0f;
-            for (int i = 0; i < 43; i++) {
+            for (int i = 0; i < 17; i++) {
               if (i <= volume_ratio && !is_muted) {
                 it[i] = color * min( 255.0f * (volume_ratio - i) , 255.0f ) ;
               } else {
@@ -412,7 +412,7 @@ light:
             auto light_color = id(voice_assistant_leds).current_values;
             Color color(light_color.get_red() * 255, light_color.get_green() * 255,
                   light_color.get_blue() * 255);
-            for (int i = 0; i < 43; i++) {
+            for (int i = 0; i < 17; i++) {
               it[i] = color;
             }
       - addressable_twinkle:
@@ -420,7 +420,7 @@ light:
           twinkle_probability: 50%
       - addressable_rainbow:
           name: "Rainbow"
-          width: 43
+          width: 17
       - addressable_lambda:
           name: "Error"
           update_interval: 10ms
@@ -433,7 +433,7 @@ light:
               brightness_decreasing = true;
             }
             Color error_color(255, 0, 0);
-            for (int i = 0; i < 43; i++) {
+            for (int i = 0; i < 17; i++) {
               it[i] = error_color * uint8_t(255/brightness_step_number*(brightness_step_number-brightness_step));
             }
             if (brightness_decreasing) {
@@ -458,7 +458,7 @@ light:
             auto light_color = id(led_ring).current_values;
             Color color(light_color.get_red() * 255, light_color.get_green() * 255,
                   light_color.get_blue() * 255);
-            for (int i = 0; i < 43; i++) {
+            for (int i = 0; i < 17; i++) {
               it[i] = color * uint8_t(255/brightness_step_number*(brightness_step_number-brightness_step));
             }
             if (brightness_decreasing) {
@@ -476,17 +476,17 @@ light:
             auto light_color = id(led_ring).current_values;
             Color color(light_color.get_red() * 255, light_color.get_green() * 255,
                   light_color.get_blue() * 255);
-            auto timer_ratio = 43.0f * id(first_active_timer).seconds_left / max(id(first_active_timer).total_seconds , static_cast<uint32_t>(1));
+            auto timer_ratio = 17.0f * id(first_active_timer).seconds_left / max(id(first_active_timer).total_seconds , static_cast<uint32_t>(1));
             uint8_t last_led_on = static_cast<uint8_t>(ceil(timer_ratio)) - 1;
-            for (int i = 0; i < 43; i++) {
-              float brightness_dip = ( i == id(global_led_animation_index) % 43 && i != last_led_on ) ? 0.96f : 1.0f ;
+            for (int i = 0; i < 17; i++) {
+              float brightness_dip = ( i == id(global_led_animation_index) % 17 && i != last_led_on ) ? 0.96f : 1.0f ;
               if (i <= timer_ratio) {
                 it[i] = color * min(255.0f * brightness_dip * (timer_ratio - i) , 255.0f * brightness_dip) ;
               } else {
                 it[i] = Color::BLACK;
               }
             }
-            id(global_led_animation_index) = (43 + id(global_led_animation_index) - 1) % 43;
+            id(global_led_animation_index) = (17 + id(global_led_animation_index) - 1) % 17;
       - addressable_lambda:
           name: "Factory Reset Coming Up"
           update_interval: 1s
@@ -496,14 +496,14 @@ light:
             if (initial_run) {
               index = 0;
             }
-            for (int i = 0; i < 43; i++) {
+            for (int i = 0; i < 17; i++) {
               if (i <= index ) {
                 it[i] = color;
               } else {
                 it[i] = Color::BLACK;
               }
             }
-            index = (index + 1) % 43;
+            index = (index + 1) % 17;
   # User facing LED ring. Remapping of the internal LEDs.
   # Exposed to be used by the user.
   - platform: partition
@@ -522,54 +522,16 @@ light:
     segments:
       - id: leds_internal
         from: 0
-        to: 31
+        to: 8
         reversed: True
       - id: leds_internal
-        from: 32
-        to: 42
+        from: 9
+        to: 15
         reversed: True
     effects:
       - addressable_rainbow:
           name: "Rainbow"
-          width: 43
-
-  - platform: esp32_rmt_led_strip
-    id: led_respeaker_onboard
-    name: LED Respeaker onboard
-    disabled_by_default: true
-    internal: false
-    rgb_order: GRB
-    pin: GPIO1
-    num_leds: 1
-    rmt_symbols: 48
-    chipset: ws2812
-    entity_category: config
-    default_transition_length: 0s
-    effects:
-      - pulse:
-          name: "Fast Pulse"
-          transition_length: 100ms
-          update_interval: 100ms
-          min_brightness: 50%
-          max_brightness: 100%
-      - pulse:
-          name: "Slow Pulse"
-          transition_length: 500ms
-          update_interval: 500ms
-          min_brightness: 50%
-          max_brightness: 100%
-  - platform: esp32_rmt_led_strip
-    id: led_esp_onboard
-    name: LED ESP onboard
-    disabled_by_default: true
-    internal: false
-    rgb_order: GRB
-    pin: GPIO48
-    num_leds: 1
-    rmt_symbols: 48
-    chipset: ws2812
-    entity_category: config
-    default_transition_length: 0s
+          width: 17
 
 sensor:
   - platform: template
@@ -1052,7 +1014,7 @@ respeaker_lite:
           red: 50%
           green: 50%
           blue: 50%
-          id: led_respeaker_onboard
+          id: voice_assistant_leds
           effect: "Slow Pulse"
     on_end:
       - light.turn_on:
@@ -1060,22 +1022,22 @@ respeaker_lite:
           red: 0%
           green: 100%
           blue: 0%
-          id: led_respeaker_onboard
+          id: voice_assistant_leds
           effect: "Fast Pulse"
       - delay: 3s
       - light.turn_off:
-          id: led_respeaker_onboard
+          id: voice_assistant_leds
     on_error:
       - light.turn_on:
           brightness: 50%
           red: 100%
           green: 0%
           blue: 0%
-          id: led_respeaker_onboard
+          id: voice_assistant_leds
           effect: "Fast Pulse"
       - delay: 3s
       - light.turn_off:
-          id: led_respeaker_onboard
+          id: voice_assistant_leds
 
 external_components:
   - source:
