--- a/common/smartv2-base.yaml
+++ b/common/smartv2-base.yaml
@@ -73,6 +73,9 @@ wifi:
     - script.execute: control_leds
   on_disconnect:
     - script.execute: control_leds
+  ap:
+    ssid: "Respeaker-Satellite"
+    password: "lNw0AP2PKQGR"
 
 logger:
   level: debug
@@ -110,6 +113,7 @@ api:
 ota:
   - platform: esphome
     id: ota_esphome
+    password: !secret ota_password
 
 i2c:
   - id: internal_i2c
