--- a/common/smartv2-base.yaml
+++ b/common/smartv2-base.yaml
@@ -18,7 +18,7 @@ substitutions:
   hidden_ssid: "false"
 
 esphome:
-  project:
+  project: 
     name: armatec.smartv2 Satellite
     version: 2025.2.2
   name: smartv2-satellite
@@ -83,7 +83,7 @@ logger:
   initial_level: debug
   logs:
     sensor: WARN  # avoids logging debug sensor updates
-#  hardware_uart: uart0  #Uncomment to see serial logs via USB connection. Comment out after debugging - this line introduces noise on speaker...
+#  hardware_uart: uart0  #Uncomment to see serial logs via USB connection. Comment out after debufgging - this line introduces noise on speaker...
 
 select:
   - platform: logger
@@ -191,7 +191,7 @@ switch:
   # stateless momentary mic mute switch
   - platform: gpio
     internal: true
-    pin:
+    pin: 
       number: GPIO4 # D3
       inverted: true
     id: mute_toggle
@@ -259,7 +259,7 @@ switch:
     entity_category: config
     optimistic: true
     restore_mode: RESTORE_DEFAULT_ON
-  # Start if a question is received
+  # Start if a question is recieved
   - platform: template
     id: is_question_response_switch
     name: "Is Question Response"
@@ -276,7 +276,7 @@ switch:
       # Disable stop wake word
       - lambda: id(stop).disable();
       - script.execute: disable_repeat
-      # Stop any current announcement (i.e., stop the timer ring mid-playback)
+      # Stop any current annoucement (ie: stop the timer ring mid playback)
       - if:
           condition:
             media_player.is_announcing:
@@ -338,18 +338,6 @@ light:
         to: 15
         reversed: True
     effects:
-      - addressable_lambda:
-          name: "Startup Animation"
-          update_interval: 30ms
-          lambda: |-
-            static int pos = 0;
-            static float hue = 0.0f;
-            it.all() = Color::BLACK;
-            it[pos] = Color::from_hsv(hue * 360, 1.0, 1.0);
-            it[(pos + 6) % 17] = Color::from_hsv((hue + 0.33f) * 360, 1.0, 1.0);
-            it[(pos + 12) % 17] = Color::from_hsv((hue + 0.66f) * 360, 1.0, 1.0);
-            pos = (pos + 1) % 17;
-            hue = fmod(hue + 0.05f, 1.0f);
       - addressable_lambda:
           name: "Waiting for Command"
           update_interval: 60ms
@@ -754,13 +742,24 @@ script:
           effect: "Twinkle"
 
   # Script executed during initialization
-  # Uses the new Startup Animation effect
+  # Blue Twinkle if Wifi is connected, Else rainbow
   - id: control_leds_init_state
     then:
-      - light.turn_on:
-          id: voice_assistant_leds
-          brightness: 100%
-          effect: "Startup Animation"
+      - if:
+          condition:
+            wifi.connected:
+          then:
+            - light.turn_on:
+                brightness: 50%
+                red: 9.4%
+                green: 73.3%
+                blue: 94.9%
+                id: voice_assistant_leds
+                effect: "Twinkle"
+          else:
+            - light.turn_on:
+                id: voice_assistant_leds
+                effect: "Rainbow"
 
   # Script executed when the device has no connection to Home Assistant
   # Red Twinkle (This will be visible during HA updates for example)
@@ -804,7 +803,7 @@ script:
           effect: "Listening For Command"
 
   # Script executed when the voice assistant is thinking to a command
-  # The spin stops and the 2 LEDs that are currently on and blinking indicating the command is being processed.
+  # The spin stops and the 2 LEDs that are currently on and blinking indicating the commend is being processed.
   - id: control_leds_voice_assistant_thinking_phase
     then:
       - light.turn_on:
@@ -956,24 +955,24 @@ script:
 
 i2s_audio:
   - id: i2s_output
-    i2s_lrclk_pin:
+    i2s_lrclk_pin: 
       number: GPIO7
       allow_other_uses: true
-    i2s_bclk_pin:
+    i2s_bclk_pin:  
       number: GPIO8
       allow_other_uses: true
-    i2s_mclk_pin:
+    i2s_mclk_pin:  
       number: GPIO9
       allow_other_uses: true
 
   - id: i2s_input
-    i2s_lrclk_pin:
+    i2s_lrclk_pin:  
       number: GPIO7
       allow_other_uses: true
-    i2s_bclk_pin:
+    i2s_bclk_pin:  
       number: GPIO8
       allow_other_uses: true
-    i2s_mclk_pin:
+    i2s_mclk_pin:  
       number: GPIO9
       allow_other_uses: true
 
@@ -1019,7 +1018,7 @@ speaker:
       - id: media_mixing_input
         timeout: never
 
-  # Virtual speakers to resample each pipeline's audio, if necessary, as the mixer speaker requires the same sample rate
+  # Vritual speakers to resample each pipelines' audio, if necessary, as the mixer speaker requires the same sample rate
   - platform: resampler
     id: announcement_resampling_speaker
     output_speaker: announcement_mixing_input
@@ -1165,7 +1164,7 @@ external_components:
       type: git
       url: https://github.com/formatBCE/Respeaker-Lite-ESPHome-integration
       ref: main
-    components:
+    components: 
       - respeaker_lite
     refresh: 0s
 
@@ -1395,10 +1394,10 @@ voice_assistant:
         id(next_timer_name).publish_state(id(first_active_timer).name);
   on_timer_tick:
     - script.execute: control_leds
-    - lambda: |
+    - lambda: | 
         int seconds_left = id(first_active_timer).seconds_left;
         if (std::abs(seconds_left) % 5 == 0) {
-          id(next_timer).publish_state(seconds_left);
+          id(next_timer).publish_state(seconds_left); 
         }
 
 button:
